// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserDropdown should render 1`] = `
<div>
  <div>
    <button
      class="user-menu button-root btn btn-unstyled trigger"
      type="button"
    >
      <div
        class="text-truncate"
      >
        <div
          class="sticker sticker-root sticker-static avatar sticker-circle"
        >
          TT
        </div>
        <span
          class="user-name"
        >
          Test Test
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`UserDropdown should render dropdown menu when clicked 1`] = `
<body
  class="dxp"
>
  <div>
    <div>
      <button
        class="user-menu button-root btn btn-unstyled trigger"
        style=""
        type="button"
      >
        <div
          class="text-truncate"
        >
          <div
            class="sticker sticker-root sticker-static avatar sticker-circle"
          >
            TT
          </div>
          <span
            class="user-name"
          >
            Test Test
          </span>
        </div>
      </button>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu user-menu-dropdown show"
        style="left: -995px; top: -999px;"
      >
        <ul
          class="list-unstyled"
        >
          <li
            class="dropdown-subheader"
            role="presentation"
          >
            test@test.com
          </li>
          <li>
            <span
              class="dropdown-item"
            >
              <a
                class="dropdown-item"
                href="/link-1"
              >
                Link 1
              </a>
            </span>
          </li>
          <li>
            <span
              class="dropdown-item"
            >
              <a
                class="dropdown-item"
                href="/link-externo-2"
              >
                Link 2
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;
